Fixed game title color in dark mode

--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@
         padding: 15px;
         padding-bottom: 10px;
         font-size: 1.1rem;
-        color: #333;
+        color: var(--text-primary);
     }
 
     /*game data (rating, release date)*/
